--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/x-icon" href="https://i.imgur.com/75lDT1Z.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/index.css" rel="stylesheet">
-    <title>Readmefy</title>
+    <title>Application | Readmefy</title>
   </head>
   <body>
     <div id="root"></div>
