🚸 Use Prettier, initialize Tailwind and Heroicons and create homepage

--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="https://i.imgur.com/75lDT1Z.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/src/index.css" rel="stylesheet">
-    <title>Application | Readmefy</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/index.jsx"></script>
-  </body>
+<!DOCTYPE html>
+<html lang="en" class="scroll-smooth">
+	<head>
+		<meta charset="UTF-8" />
+		<link
+			rel="icon"
+			type="image/x-icon"
+			href="https://i.imgur.com/I6S586o.png"
+		/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link href="/src/styles/index.css" rel="stylesheet" />
+		<title>Application | Readmefy</title>
+	</head>
+	<body id="root" class="bg-dark-900 text-white-500">
+		<script type="module" src="/src/index.jsx"></script>
+	</body>
 </html>
