--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link href="/src/styles/index.css" rel="stylesheet" />
 		<title>Application | Readmefy</title>
 	</head>
-	<body id="root" class="bg-dark-900 text-white-500">
+	<body id="root" class="bg-default bg-dark-900 text-white-500">
 		<script type="module" src="/src/index.jsx"></script>
 	</body>
 </html>
