♻️ Refactor routes conditions and create not found pages

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 		<link href="/src/styles/index.css" rel="stylesheet" />
 		<title>Application | Readmefy</title>
 	</head>
-	<body id="root" class="bg-default bg-dark-900 text-white-500">
+	<body
+		id="root"
+		class="bg-default bg-dark-900 text-white-500 w-min-[calc(100vh-(87px+103px))]"
+	>
 		<script type="module" src="/src/index.jsx"></script>
 	</body>
 </html>
